fixed storageImplementation functions
