# hr_core/api_specs/api_spec.json
@@ -106,12 +106,16 @@
         },
         "total_absent_days": {
           "type": "number"
+        },
+        "total_single_punch_in_days": {
+          "type": "number"
         }
       },
       "required": [
         "total_working_days",
         "total_present_days",
-        "total_absent_days"
+        "total_absent_days",
+        "total_single_punch_in_days"
       ]
     },
     "DailyAttendanceData": {
