# hr_core/interactors/storage_interfaces/dtos.py
@@ -41,3 +41,4 @@ class FullMothStatsDto:
     total_working_days: int
     total_present_days: int
     total_absent_days: int
+    total_single_punch_in_days: int
